--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,12 +9,13 @@
 }
 
 .header {
-  background-color: #282c34;
+  @apply px-10;
+  background-color: #000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
